Mon Oct 17 06:15:45 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator.mpc:

          Missing from previous commit.

Fri Oct 14 14:47:22 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_domain_validator.mpb:

          fuzz.

Fri Oct 14 14:01:41 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_domain_validator.mpb:

          Missing from a previous commit.

Fri Oct 14 02:31:06 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/Domain_Validator.idl:
        * tools/Domain_Validator/Domain_Validator.mpc:

          Fuzz.

Thu Oct 13 22:38:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * tests/Plan_Launcher/NM-Delay/NodeMap.cdd:
        * tests/Plan_Launcher/NM-Delay/run_test.pl:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.cpp:

          Added capability for the domain validator to check the liveness of the
          ExecutionManager.

Thu Oct 13 22:25:39 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Plan_Launcher/NM-Delay:
        * tests/Plan_Launcher/NM-Delay/Deployment.cdp:
        * tests/Plan_Launcher/NM-Delay/NodeMap.cdd:
        * tests/Plan_Launcher/NM-Delay/run_test.pl:

          Test for the domain validator.

Thu Oct 13 22:24:56 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.h:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.cpp:

          Bugfixes.

Thu Oct 13 22:19:49 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/id_map.hpp:
        * tools/Config_Handlers/XML_File_Intf.cpp:

          1) the XML_Helper is no longer terminated in the File_Intf destructor,